# SatelliteObjectClassifier-1

./: .gitignore  .replit  README.md  build_exe.py  demo_architecture.py  demo_console.py  main.py  pyproject.toml  replit.md
features/: feature_extractor.py  shape_analyzer.py  solar_panel_detector.py  texture_analyzer.py
gui/: main_window.py  progress_dialog.py  results_window.py
ml/: classifier_ensemble.py  data_manager.py
preprocessing/: image_processor.py  noise_handler.py  object_detector.py
utils/: config.py  logger.py
